src/objects/Field_Officer_Weekly_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Officer</label>
        <referenceTo>Field_Officer__c</referenceTo>
        <relationshipLabel>Field Officer Weekly Reports</relationshipLabel>
        <relationshipName>Field_Officer_Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Field Officer Weekly Reports</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Report-{0000}</displayFormat>
        <label>Field Officer Weekly Reports Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Officer Weekly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>